--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>This is title</title>
+    </head>
     <body>This is the file. This is the Lucky's file. This is edit by Vish.</body>
 
 </html>
